--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg": "^8.2.1",
+    "tslint": "^6.1.2",
     "ts-node": "^8.10.2"
   },
   "devDependencies": {
