--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.17.1",
     "pg": "^8.2.1",
     "tslint": "^6.1.2",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
