--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/pg": "^7.14.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "pg": "^8.2.1",
-    "tslint": "^6.1.2",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "~7.12.1",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.6",
-    "@types/express": "^4.17.7"
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
