--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
+    "@types/nodemailer-direct-transport": "^1.0.31",
+    "@types/nodemailer-smtp-transport": "^2.7.4",
     "@types/pg": "^7.14.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.11",
     "pg": "~7.12.1",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
@@ -30,7 +34,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
-    "@types/node": "^14.0.18",
+    "@types/node": "^14.6.2",
     "nodemon": "^2.0.4",
     "tslint": "^6.1.2",
     "typescript": "^3.9.6"
